--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 						<li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
+				<div class="image phone"><div class="inner">
+					<img src="staticmap.php?center=49.1745,-123.9445&zoom=14&size=221x320&maptype=mapnik" />
+					</div></div>
 			</header>
 
 		<!-- One -->
