--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner">
-					<img src="staticmap.php?center=49.1745,-123.9445&zoom=14&size=221x320&maptype=mapnik" />
+					<div class="image phone"><div class="inner"><img src="images/image1.jpg" alt="" /></div></div>
+
 					</div></div>
 			</header>
 
