--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Fractal by HTML5 UP</title>
+		<title>Syvics - We're doing interesting things.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,7 +20,7 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Syvics</a></h1>
-					<p>We are doing interesting things<br />
+					<p>We're doing interesting things<br />
 					in the central Vancouver Island area.</p>
 					<ul class="actions">
 						<li><a href="#" class="button special icon fa-download">Download</a></li>
