--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
    	<div class="row">
    		<div class="logo">
-	         <a href="index.html">Khronos</a>
+			<a href="index.html">Khronos</a><h1> Syvics </h1>
 	      </div> 
 
 			<div class="social-links">
@@ -70,7 +70,7 @@
 
 		   			
 			  			<div class="bottom-text">
-			  				<h1>Syvics</h1>
+			  				<h1>We're doing interesting things.</h1>
 				  			<p>
 							From reimagining our cities as walkable places to developing modern tools for governance, we are committed to improving the central Vancouver Island area.
 				  			</p>			  				
