--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
    	<div class="row">
    		<div class="logo">
-			<a href="index.html">Khronos</a><h1> Syvics </h1>
+			<a href="index.html">Khronos</a>
 	      </div> 
-
+<h1> Syvics </h1>
 			<div class="social-links">
 			   <ul>
 					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
