--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
    	<div class="row">
    		<div class="logo">
 			<a href="index.html">Khronos</a>
-	      </div> 
-<h1> Syvics </h1>
+	      </div> <h1> Syvics </h1>
+
 			<div class="social-links">
 			   <ul>
 					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
