--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    	<div class="row">
    		<div class="logo">
 			<a href="index.html">Khronos</a>
-	      </div> <h1> Syvics </h1>
+	      </div> 
 
 			<div class="social-links">
 			   <ul>
