--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
    		<div class="col-twelve tabs-wrap">
 
    			<ul class="tabs"> 
-   				<li class="active" data-id="tab-about"><i class="icon-user"></i><span>About</span></li>
+   				<li class="active" data-id="tab-about"><i class="icon-user"></i><span>Our Team</span></li>
    				<li data-id="tab-contact"><i class="icon-mail"></i><span>Contact</span></li>							
 					<li data-id="tab-subscribe"><i class="icon-newspaper"></i><span>Subscribe</span></li>				
 				</ul> <!-- /tabs -->
@@ -122,7 +122,7 @@
 					   	<div class="row tab-entry-intro">
 					   		<div class="col-twelve with-bottom-line">
 
-					   			<h1>Get To Know Us.</h1>
+					   			<h1>Our projects.</h1>
 
 					   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
@@ -346,31 +346,7 @@
    </section> <!-- /info -->
 
 
-   <!-- CTA Section
-   ================================================== -->
-	<section id="cta">
-
-   	<div class="row cta-wrap">
-
-   		<div class="col-twelve cta-content">  
-
-	     		<h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Styleshout Recommends Dreamhost.</a></h2>
-
-		      <p class="lead">
-		      Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-				Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>. 
-				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->	
-				</p>
-
-				<div class="action">
-			      <a class="button large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Sign Up Now</a>
-		      </div>		     	
-
-   		</div>
-
-   	</div> <!-- /cta-content -->
-
-   </section> <!-- /cta --> 
+   
 
 
    <!-- footer
@@ -387,16 +363,11 @@
 	            <li><a href="#">
 	              	<i class="fa fa-twitter"></i><span>Twitter</span>
 	            </a></li>
-	            <li><a href="#">
-	              	<i class="fa fa-pinterest"></i><span>Pinterest</span>
-	            </a></li>
+	            
 	            <li><a href="#">
 	              	<i class="fa fa-instagram"></i><span>Instagram</span>
 	            </a></li>
-	            <li><a href="#">
-	              	<i class="fa fa-dribbble"></i><span>Dribbble</span>
-	            </a></li>
-	         </ul>
+	                  </ul>
 	         
 			</div> <!-- /row -->
    	</div> <!-- /social-wrap -->
