--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 
 		   			
 			  			<div class="bottom-text">
+							<font size="150%">Syvics</font>
+							<p><p>
 			  				<h1>We're doing interesting things.</h1>
 				  			<p>
 							From reimagining our cities as walkable places to developing modern tools for governance, we are committed to improving the central Vancouver Island area.
