--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 		   			
 			  			<div class="bottom-text">
-							<font size="300%">Syvics</font>
+							<h1>Syvics</h1>
 							<p><p>
 			  				<h1>We're doing interesting things.</h1>
 				  			<p>
