--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							
 			  				<h1>we're doing interesting things.</h1>
 				  			<p>
-							From reimagining our cities as walkable places to developing modern tools for governance, we are committed to improving the central Vancouver Island area.
+							<span style="color:#66ffcc;">From reimagining our cities as walkable places to developing modern tools for governance, we are committed to improving the central Vancouver Island area.</span>
 				  			</p>			  				
 			  			</div>			  						  			   			
 
