--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
 
 		   			
 			  			<div class="bottom-text">
-							<h1>At <span style="color:#66ffcc;">Syvics</span></h1>
-							
-			  				<h1>we're doing interesting things.</h1>
+							<h1>At <span style="color:#66ffcc;">Syvics</span>we're doing interesting things.</h1>
 				  			<p>
 							<span style="color:#66ffcc;">From reimagining our cities as walkable places to developing modern tools for governance, we are committed to improving the central Vancouver Island area.</span>
 				  			</p>			  				
