--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
    	<div class="row">
    		<div class="logo">
-			<a href="index.html">Khronos</a>
+			<a href="index.html">Khronos</a> <span style="color:#ffffff;"><h1>Syvics</h1></span>
 	      </div> 
 
 			<div class="social-links">
