--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
    	<div class="row">
    		<div class="logo">
-			<a href="index.html">Khronos</a> <span style="color:#ffffff;">Syvics</span>
+			<a href="index.html">Khronos</a> <h1><span style="color:#ffffff;">Syvics</span></h1>
 	      </div> 
 
 			<div class="social-links">
@@ -70,9 +70,9 @@
 
 		   			
 			  			<div class="bottom-text">
-							<h1>At <span style="color:#66ffcc;">Syvics</span>we're doing interesting things.</h1>
+							<h1><span style="color:#66ffcc;">At Syvics we're doing interesting things.</span></h1>
 				  			<p>
-							<span style="color:#66ffcc;">From reimagining our cities as walkable places to developing modern tools for governance, we are committed to improving the central Vancouver Island area.</span>
+							From reimagining our cities as walkable places to developing modern tools for governance, we are committed to improving the central Vancouver Island area.
 				  			</p>			  				
 			  			</div>			  						  			   			
 
