--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			  			<div class="bottom-text">
 							<h1><span style="color:#66ffcc;">At Syvics we're doing interesting things.</span></h1>
 				  			<p>
-							From reimagining our cities as walkable places to developing modern tools for governance, we are committed to improving the central Vancouver Island area.
+							<span style="color:#ffffff;">From reimagining our cities as walkable places to developing modern tools for governance, we are committed to improving the central Vancouver Island area.</span>
 				  			</p>			  				
 			  			</div>			  						  			   			
 
