--- a/index.html
+++ b/index.html
@@ -373,13 +373,8 @@
    	</div> <!-- /social-wrap -->
 
    	<div class="footer-bottom">
-
-			<div class="footer-logo">
-					<img src="images/footer-logo.png" alt="">				
-			</div>
-
    		<div class="copyright">
-		     	<span>© Copyright Khronos 2016.</span> 
+		     	<span>© Copyright Syvics 2017.</span> 
 		     	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>		         	
 		   </div>		   
 
