--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
    		<div class="col-twelve tabs-wrap">
 
    			<ul class="tabs"> 
-   				<li class="active" data-id="tab-about"><i class="icon-user"></i><span>Our Team</span></li>
-   				<li data-id="tab-contact"><i class="icon-mail"></i><span>Contact</span></li>							
-					<li data-id="tab-subscribe"><i class="icon-newspaper"></i><span>Subscribe</span></li>				
+   				<li class="active" data-id="tab-about"><i class="icon-user"></i><span>What We're Doing</span></li>
+   				<li data-id="tab-contact"><i class="icon-mail"></i><span>Contact Us</span></li>							
+				<li data-id="tab-subscribe"><i class="icon-newspaper"></i><span>Stay Informed</span></li>				
 				</ul> <!-- /tabs -->
 
 				<div class="tab-container">
