--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 								   <div class="bgrid item">
 
-								   	<span class="icon"><i class="icon-pencil-ruler"></i></span>		            
+								   	<span class="icon"><i class="bicycle"></i></span>		            
 
 						            <div class="item-content">
 						            	<h3 class="h05">Stylish Design</h3>
