--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 									<div class="bgrid item">	
 
-										<span class="icon"><i class="icon-eye"></i></span>                          
+										<span class="icon"><i class="icon-pencil-ruler"></i></span>                          
 
 						            <div class="item-content">	
 						            	<h3 class="h05">Retina Ready</h3>  
