--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
 
 						      	<div class="bgrid item">	
 
-						      		<span class="icon"><i class="icon-mobile"></i></span>            
+						      		<span class="icon"><i class="icon-comment"></i></span>            
 
 						            <div class="item-content">	
 
-						            	 <h3 class="h05">Fully Resposive</h3>
+						            	 <h3 class="h05">Know Your Representatives</h3>
 
 							            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 						         		</p>
@@ -150,10 +150,10 @@
 
 									<div class="bgrid item">	
 
-										<span class="icon"><i class="icon-pencil-ruler"></i></span>                          
+										<span class="icon"><i class="icon-sign"></i></span>                          
 
 						            <div class="item-content">	
-						            	<h3 class="h05">Retina Ready</h3>  
+						            	<h3 class="h05">Dog Park Locations</h3>  
 
 							            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 						         		</p>
@@ -168,7 +168,7 @@
 								   	<span class="icon"><i class="icon-map"></i></span>		            
 
 						            <div class="item-content">
-						            	<h3 class="h05">Stylish Design</h3>
+						            	<h3 class="h05">Nanaimo Bike Routes/Lanes</h3>
 
 							            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 						        			</p> 
