--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			   <ul>
 					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					   <li><a href="#"><i class="fa fa-medium"></i></a></li>
+					<li><a href="#"><i class="fa fa-medium" aria-hidden="true">></i></a></li>
 				   <li><a href="#"><i class="fa fa-instagram"></i></a></li> 
 				  				     			
 				</ul>
