--- a/index.html
+++ b/index.html
@@ -122,9 +122,13 @@
 					   	<div class="row tab-entry-intro">
 					   		<div class="col-twelve with-bottom-line">
 
-					   			<h1>Our projects.</h1>
+					   			<h1>Our Projects</h1>
 
-					   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+					   			<p class="lead">
+								Our projects aim to make our region more liveable, our businesses more viable and our development patterns more sustainabile.
+								How do we achieve this? Through modern systems that are simple; that promote openess, fairness, and transparency; and promote responsible development in the region.
+								
+								</p>
 
 					   		</div>   		
 					   	</div> <!-- /tab-content-intro -->
