--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
 					   			<h1>Our Projects</h1>
 
 					   			<p class="lead">
-								Our projects aim to make our region more liveable, our businesses more viable and our development patterns more sustainabile.
-								How do we achieve this? Through modern systems that are simple; that promote openess, fairness, and transparency; and promote responsible development in the region.
-								
-								</p>
+								Our projects aim to make our region more liveable, our businesses more viable and our development patterns more sustainabile
+								through modern systems that are simple, open, and fair. 
+																</p>
 
 					   		</div>   		
 					   	</div> <!-- /tab-content-intro -->
