--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 								   	<span class="icon"><i class="icon-map"></i></span>		            
 
 						            <div class="item-content">
-						            	<h3 class="h05">Nanaimo Bike Routes/Lanes</h3>
+						            	<h3 class="h05">RDN Bike Routes/Lanes</h3>
 
 							            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 						        			</p> 
