--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
 										<span class="icon"><i class="icon-sign"></i></span>                          
 
 						            <div class="item-content">	
-						            	<h3 class="h05">Request Road Improvements</h3>  
+						            	<h3 class="h05">Downtown Signposts</h3>  
 
-							            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+							            <p>Learn whats happening in downtowns...maps, business promotion. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 						         		</p>
 
 						         		
@@ -171,9 +171,9 @@
 								   	<span class="icon"><i class="icon-map"></i></span>		            
 
 						            <div class="item-content">
-						            	<h3 class="h05">RDN Bike Routes/Lanes</h3>
+						            	<h3 class="h05">Phase 0</h3>
 
-							            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+							            <p>Small projects to pilot the predestrianization of downtown NanaimoSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 						        			</p> 
 
 						        			
